[package]
name = "steam_guard"
version = "0.1.0"
authors = ["Simon Shi <simonsmh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oath = "0.10.2"
data-encoding = "2.2.0"
copypasta = "0.6.3"

[features]
default = []
predefined_secret = []

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
